<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TabWidget
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@android:id/tabs" />
    
    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

<!-- ///////////////////////////////////////////////// -->
<!-- //////////////////TAB 1////////////////////////// -->
<!-- ///////////////////////////////////////////////// -->

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="70dp" >

        <EditText
            android:id="@+id/NameOfRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NameOfRecipe" />

        <Spinner
            android:id="@+id/RecipeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/TypeOfRecipe" />

        <EditText
            android:id="@+id/Season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Seasonal" />

        <Button
            android:id="@+id/UploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listenerOfUploadButton"
            android:text="@string/Upload" />

    </LinearLayout>
     
<!-- ///////////////////////////////////////////////// -->
<!-- //////////////////TAB 2////////////////////////// -->
<!-- ///////////////////////////////////////////////// -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingTop="70dp"
    	android:id="@+id/tab2" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/IngredientsTable"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/Ingredients1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <EditText
                        android:id="@+id/IngredientBox0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Ingredient"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/EditButton0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Edit"
                        android:visibility="invisible" />

                </TableRow>

                <TableRow
                    android:id="@+id/Amount1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <EditText
                        android:id="@+id/AmountBox0"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Amount"
                        android:inputType="number"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/RemoveButton0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Remove"
                        android:visibility="invisible" />

                </TableRow>

                <TableRow
                    android:id="@+id/Measurement1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <Spinner
                        android:id="@+id/WeightMeasurement0"
                        style="@android:style/Widget.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/WeightMeasurement"
                        android:prompt="@string/Measurement" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/AddIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AddIngredient" />

        </LinearLayout>

    </ScrollView>

	</LinearLayout>
	
        
<!-- ///////////////////////////////////////////////// -->
<!-- //////////////////TAB 3////////////////////////// -->
<!-- ///////////////////////////////////////////////// -->
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:id="@+id/tab3"
    	android:orientation="vertical"
    	android:paddingTop="70dp" >

        <EditText
            android:id="@+id/MethodBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/Method"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
   
    </LinearLayout>
    
</FrameLayout>
</TabHost>




<!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addIngredient"
        android:text="@string/AddIngredient" />

    <CheckBox
        android:id="@+id/NoMoreIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoMoreIngredients" />

    <Button
        android:id="@+id/SubmitIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitIngredients" />

</LinearLayout-->